# waymonad

./: .gitignore  .gitmodules  README.md  cabal.project  default.nix  hayland.cabal  libinput.nix  overlay.nix  shell.nix  sources.nix  stack.yaml  waymonad-scanner.nix  waymonad.cabal  waymonad.nix  xkbcommon.nix
hayland/: hayland.nix
hsroots/: hsroots.cabal  hsroots.nix
hsroots-new/: hsroots.cabal  hsroots.nix
hsroots-new/WlRoots/: Backend.hs
hsroots-new/WlRoots/Internal/: Generate.hs
hsroots/protocol/: wlr-layer-shell-unstable-v1-protocol.h
hsroots/src/Graphics/: Pixman.hsc
hsroots/src/Graphics/Wayland/: Resource.hs  Signal.hsc
hsroots/src/Graphics/Wayland/Server/: Client.hsc
hsroots/src/Graphics/Wayland/WlRoots/: Backend.hsc  Box.hsc  Buffer.hsc  Compositor.hs  Cursor.hsc  DataControl.hsc  DeviceManager.hsc  Egl.hs  ExportDMABuf.hsc  IdleInhibit.hsc  InputInhibitor.hsc  LinuxDMABuf.hsc  Output.hsc  OutputLayout.hsc  PrimarySelection.hsc  Render.hsc  Seat.hsc  ServerDecoration.hsc  Surface.hsc  SurfaceLayers.hsc  Tabletv2.hsc  Util.hsc  XWayland.hsc  XdgShell.hsc  XdgShellv6.hsc
hsroots/src/Graphics/Wayland/WlRoots/Backend/: Headless.hsc  Libinput.hsc  Multi.hs  Session.hs
hsroots/src/Graphics/Wayland/WlRoots/Input/: Keyboard.hsc
hsroots/src/Graphics/Wayland/WlRoots/Render/: Gles2.hs  Matrix.hs
hsroots/src/Graphics/Wayland/WlRoots/Util/: Region.hsc
src/: Config.hs
src/Config/: Input.hs  Logger.hs  Output.hs
src/Waymonad/: Output.hs  Types.hs
src/Waymonad/Output/: Core.hs  DamageDisplay.hs  Render.hs
src/Waymonad/Protocols/: Background.hs  DMAExport.hs  DataControl.hs  IdleInhibit.hs  InputInhibit.hs  LinuxDMABuf.hs
src/Waymonad/Shells/: XdgShell.hs  XdgShellv6.hs
waymonad-scanner/: cabal.project  waymonad-scanner.cabal  waymonad-scanner.nix
