name:                hsroots
version:             0.1.0.0
synopsis:            A small simple wrapper around wlroots
license:             LGPL-2.1
license-file:        LICENSE
author:              Markus Ongyerth
maintainer:          ongy@ongy.net
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Graphics.Egl
  exposed-modules:     Graphics.Pixman
  exposed-modules:     Graphics.Wayland.Global
  exposed-modules:     Graphics.Wayland.List
  exposed-modules:     Graphics.Wayland.Resource
  exposed-modules:     Graphics.Wayland.Server.Client
  exposed-modules:     Graphics.Wayland.Signal
  exposed-modules:     Graphics.Wayland.WlRoots.Backend
  exposed-modules:     Graphics.Wayland.WlRoots.Backend.Headless
  exposed-modules:     Graphics.Wayland.WlRoots.Backend.Libinput
  exposed-modules:     Graphics.Wayland.WlRoots.Backend.Multi
  exposed-modules:     Graphics.Wayland.WlRoots.Backend.Session
  exposed-modules:     Graphics.Wayland.WlRoots.Box
  exposed-modules:     Graphics.Wayland.WlRoots.Buffer
  exposed-modules:     Graphics.Wayland.WlRoots.Compositor
  exposed-modules:     Graphics.Wayland.WlRoots.Cursor
  exposed-modules:     Graphics.Wayland.WlRoots.DataControl
  exposed-modules:     Graphics.Wayland.WlRoots.DeviceManager
  exposed-modules:     Graphics.Wayland.WlRoots.ExportDMABuf
  exposed-modules:     Graphics.Wayland.WlRoots.Egl
  exposed-modules:     Graphics.Wayland.WlRoots.Global
  exposed-modules:     Graphics.Wayland.WlRoots.IdleInhibit
  exposed-modules:     Graphics.Wayland.WlRoots.Input
  exposed-modules:     Graphics.Wayland.WlRoots.Input.Buttons
  exposed-modules:     Graphics.Wayland.WlRoots.Input.Keyboard
  exposed-modules:     Graphics.Wayland.WlRoots.Input.Pointer
  exposed-modules:     Graphics.Wayland.WlRoots.Input.Tablet
  exposed-modules:     Graphics.Wayland.WlRoots.Input.TabletPad
  exposed-modules:     Graphics.Wayland.WlRoots.Input.TabletTool
  exposed-modules:     Graphics.Wayland.WlRoots.Input.Touch
  exposed-modules:     Graphics.Wayland.WlRoots.InputInhibitor
  exposed-modules:     Graphics.Wayland.WlRoots.LinuxDMABuf
  exposed-modules:     Graphics.Wayland.WlRoots.Output
  exposed-modules:     Graphics.Wayland.WlRoots.OutputLayout
  exposed-modules:     Graphics.Wayland.WlRoots.Render
  exposed-modules:     Graphics.Wayland.WlRoots.Render.Color
  exposed-modules:     Graphics.Wayland.WlRoots.Render.Gles2
  exposed-modules:     Graphics.Wayland.WlRoots.Render.Matrix
  exposed-modules:     Graphics.Wayland.WlRoots.Seat
  exposed-modules:     Graphics.Wayland.WlRoots.ServerDecoration
  exposed-modules:     Graphics.Wayland.WlRoots.Surface
  exposed-modules:     Graphics.Wayland.WlRoots.SurfaceLayers
  exposed-modules:     Graphics.Wayland.WlRoots.Tabletv2
  exposed-modules:     Graphics.Wayland.WlRoots.Util
  exposed-modules:     Graphics.Wayland.WlRoots.Util.Region
  exposed-modules:     Graphics.Wayland.WlRoots.XCursor
  exposed-modules:     Graphics.Wayland.WlRoots.XCursorManager
  exposed-modules:     Graphics.Wayland.WlRoots.XWayland
  exposed-modules:     Graphics.Wayland.WlRoots.XdgShell

  other-modules:       Utility

  build-depends:       base >=4.7 && <5,
                       composition >= 1.0.2 && < 1.1,
                       hayland, xkbcommon, bytestring, text,
                       libinput, unix

  hs-source-dirs:      src

  default-language:    Haskell2010
  ghc-options:         -Wall

  pkgconfig-depends:   wayland-server, pixman-1, wlroots

  c-sources:           cbits/signal.c

